--- a/style.css
+++ b/style.css
@@ -115,8 +115,8 @@ img{
 .header__btn-menu--event {
   color: #F7F2E8;
   background-color: #3e2222;
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  height: 100%;
   position: fixed;
   right: -100%;
   top: 0;
@@ -134,6 +134,14 @@ img{
 }
 .header__btn-menu--x {
   text-align: right;
+}
+.header__btn-menu-list{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px;
+  gap: 20px;
 }
 /* -------------------- header /-------------------- */
 
